Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-85636

[Regression] Qml Positioning with nmea source file does not work

XMLWordPrintable

    • All
    • 9783cdd14fdd835d4bdc92d6cf933cd9cf7a9009 (qt/tqtc-qtlocation/5.15)

      The QML type Map does not update when position source is nmea file source.

      Steps how to reproduce:

      Please run the attached example project.

      Expected outcome:

      The map is updated with nmea position source file.

      Actual outcome:

      The map is not updated with positions from the nmea source file.

      This works with Qt version 5.13.2 and 5.12.8 so it seems like a regression.

        1. qtbug_85636.zip
          232 kB
          Tuomas Vaarala
        For Gerrit Dashboard: QTBUG-85636
        # Subject Branch Project Status CR V

            ivan.solovev Ivan Solovev
            tuomas.vaarala Tuomas Vaarala
            Votes:
            1 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes